Updated html files.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 					<div class="panel-body">
 						<img id="bio-image" class="img-responsive pull-left" alt="Responsive image" src="assets/images/crpic.jpg">								
 								<p>
-				Hello! My name is Chris and I am a Web Developer. I enjoy programming and problem solving. I like the idea of creating amazing work that people use everyday.
-			</p>
-			<br>
-			<p>
-				I currently live in New York City and hope to stay here. My career history has included working for book and magazine publishers mainly in tech support roles. I am ready for something bigger and better!
+				Hello! My name is Chris. I enjoy programming and problem solving and I like the idea of creating amazing work that people use everyday. In addition to my education, I have worked in the computing field for many years. I have spent the last several years supporting various systems for a major media company as well as for prominent book, magazine and journal publishers. My responsibilities have included database development as well as general desktop and server support. As a recent graduate of the Columbia Engineering Coding Bootcamp, I am now pursuing a position that combines my database development experience and my knowledge of web technologies.
 			</p>
 					</div>
 				</div>
