--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 						<h3 class="panel-title">Contact</h3>
 					</div>
 					<div class="panel-body">
-						<form>
+						<form action="mailto:chris_richter@outlook.com" method="post" enctype="text/plain">
  							<div class="form-group">
     						<label for="name">Name</label>
     						<input type="text" class="form-control" id="name" placeholder="Full Name (required)" required="required">
