--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,9 @@
         				</div>
 							</div>				
 							<div class="col-sm-12 col-md-6">
-								<a href="#" class="thumbnail work"><img src="assets/images/rpggame.jpg" alt="RPG Game" class="placeholder-img"></a>
+								<a href="https://stark-shelf-28495.herokuapp.com/" class="thumbnail work"><img src="assets/images/ramenjoy.png" alt="Ramen Joy" class="placeholder-img"></a>
       					<div class="caption">
-        					<h3>RPG Game</h3>
+        					<h3>Ramen Joy</h3>
         				</div>
 							</div>
 						</div>
