Updated html files.

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,13 +62,13 @@
 						</div>						
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<a href="https://intense-thicket-33780.herokuapp.com/" class="thumbnail work"><img src="assets/images/recyclenation.png" alt="Recycle Nation" class="placeholder-img"></a>
+								<a href="https://intense-thicket-33780.herokuapp.com/" class="thumbnail work"><img style='border:1px solid #4d6e9b' src="assets/images/recyclenation.png" alt="Recycle Nation" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Recycle Nation</h3>
         				</div>
 							</div>				
 							<div class="col-sm-12 col-md-6">
-								<a href="https://stark-shelf-28495.herokuapp.com/" class="thumbnail work"><img src="assets/images/ramenjoy.png" alt="Ramen Joy" class="placeholder-img"></a>
+								<a href="https://stark-shelf-28495.herokuapp.com/" class="thumbnail work"><img style='border:1px solid #4d6e9b' src="assets/images/ramenjoy.png" alt="Ramen Joy" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Ramen Joy</h3>
         				</div>
