Updated html files.

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,13 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<a href="https://chriscrichter.github.io/ProjectOne/" class="thumbnail work"><img src="assets/images/hungrymuch.png" alt="hungry much?" class="placeholder-img"></a>
+								<a href="https://chriscrichter.github.io/ProjectOne/" target="_blank" class="thumbnail work"><img src="assets/images/hungrymuch.png" alt="hungry much?" class="placeholder-img"></a>
       					<div class="caption">
        						<h3>hungry much?</h3>
        					</div>
 							</div>
 							<div class="col-sm-12 col-md-6">
-								<a href="https://chriscrichter.github.io/Weather-Dashboard/" class="thumbnail work"><img src="assets/images/weatherdashboard.png" alt="Weather Dashboard" class="placeholder-img"></a>
+								<a href="https://chriscrichter.github.io/Weather-Dashboard/" target="_blank" class="thumbnail work"><img src="assets/images/weatherdashboard.png" alt="Weather Dashboard" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Weather Dashboard</h3>
         				</div>
@@ -48,13 +48,13 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<a href="https://chriscrichter.github.io/Code-Quiz/" class="thumbnail work"><img src="assets/images/codequiz.png" alt="Code Quiz" class="placeholder-img"></a>
+								<a href="https://chriscrichter.github.io/Code-Quiz/" target="_blank" class="thumbnail work"><img src="assets/images/codequiz.png" alt="Code Quiz" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Code Quiz</h3>
         				</div>
 							</div>						
 							<div class="col-sm-12 col-md-6">
-								<a href="https://chriscrichter.github.io/Day-Planner/" class="thumbnail work" ><img style='border:1px solid #4d6e9b' src="assets/images/dailyplanner.png" border="2" alt="Day Planner" class="placeholder-img"></a>
+								<a href="https://chriscrichter.github.io/Day-Planner/" target="_blank" class="thumbnail work" ><img style='border:1px solid #4d6e9b' src="assets/images/dailyplanner.png" border="2" alt="Day Planner" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Day Planner</h3>
         				</div>
@@ -62,13 +62,13 @@
 						</div>						
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<a href="https://intense-thicket-33780.herokuapp.com/" class="thumbnail work"><img style='border:1px solid #4d6e9b' src="assets/images/recyclenation.png" alt="Recycle Nation" class="placeholder-img"></a>
+								<a href="https://intense-thicket-33780.herokuapp.com/" target="_blank" class="thumbnail work"><img style='border:1px solid #4d6e9b' src="assets/images/recyclenation.png" alt="Recycle Nation" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Recycle Nation</h3>
         				</div>
 							</div>				
 							<div class="col-sm-12 col-md-6">
-								<a href="https://stark-shelf-28495.herokuapp.com/" class="thumbnail work"><img style='border:1px solid #4d6e9b' src="assets/images/ramenjoy.png" alt="Ramen Joy" class="placeholder-img"></a>
+								<a href="https://stark-shelf-28495.herokuapp.com/" target="_blank" class="thumbnail work"><img style='border:1px solid #4d6e9b' src="assets/images/ramenjoy.png" alt="Ramen Joy" class="placeholder-img"></a>
       					<div class="caption">
         					<h3>Ramen Joy</h3>
         				</div>
