--- a/contact.html
+++ b/contact.html
@@ -26,20 +26,20 @@
 		<div class="row">
 			<div class="col-md-1">
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-9">
 				<div class="panel panel-primary">
 					<div class="panel-heading" id="panel-head">
-						<h3 class="panel-title">Contact</h3>
+						<h3 class="panel-title">Contact Info</h3>
 					</div>
 					     <p>
         
-        <h3><a href="mailto:chris_richter@outlook.com">chris_richter@outlook.com</a></h3>
+        <h3>&nbsp;&nbsp;&nbsp;E-mail: <a href="mailto:chris_richter@outlook.com">chris_richter@outlook.com</a></h3>
 
 
-        <h3><a href="http://www.linkedin.com/in/chris-richter-32932a186" target="_blank">www.linkedin.com/in/chris-richter-32932a186</a></h3>
+        <h3>&nbsp;&nbsp;&nbsp;LinkedIn: <a href="http://www.linkedin.com/in/chris-richter-32932a186" target="_blank">www.linkedin.com/in/chris-richter-32932a186</a></h3>
 
 
-        <h3><a href="https://github.com/chriscrichter" target="_blank">github.com/chriscrichter</a></h3>
+        <h3>&nbsp;&nbsp;&nbsp;GitHub: <a href="https://github.com/chriscrichter" target="_blank">github.com/chriscrichter</a></h3>
       
         </p>
 
