Updated html files.

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <h3>&nbsp;&nbsp;&nbsp;E-mail: <a href="mailto:chris_richter@outlook.com">chris_richter@outlook.com</a></h3>
 
 
-        <h3>&nbsp;&nbsp;&nbsp;LinkedIn: <a href="http://www.linkedin.com/in/chris-richter-32932a186" target="_blank">www.linkedin.com/in/chris-richter-32932a186</a></h3>
+        <h3>&nbsp;&nbsp;&nbsp;LinkedIn: <a href="http://linkedin.com/in/chris-richter-32932a186" target="_blank">linkedin.com/in/chris-richter-32932a186</a></h3>
 
 
         <h3>&nbsp;&nbsp;&nbsp;GitHub: <a href="https://github.com/chriscrichter" target="_blank">github.com/chriscrichter</a></h3>
