--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<a href="https://chriscrichter.github.io/ProjectOne/" target="_blank" class="thumbnail work"><img src="assets/images/hungrymuch.png" alt="hungry much?" class="placeholder-img"></a>
+								<a href="https://chriscrichter.github.io/hungry-much/" target="_blank" class="thumbnail work"><img src="assets/images/hungrymuch.png" alt="hungry much?" class="placeholder-img"></a>
       					<div class="caption">
        						<h3>hungry much?</h3>
        					</div>
