--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-static-top navbar-custom">
@@ -71,7 +71,7 @@
         <footer class="navbar-inverse navbar-fixed-bottom">
             <div class="container-fluid text-center">
                 <br>
-                <p>&copy; 2020  Chris Richter     
+                <p>&copy; 2021  Chris Richter     
                 </p>
             </div>
         </footer>
